external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/non_string_package_name/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 2, column 8
  |
2 | name = 1
  |        ^
invalid type: integer `1`, expected a string
